nginx/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployment
  namespace: nginx

spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
 

  template:
    metadata:
      labels:
        app: nginx
    

    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
